--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -102,7 +102,7 @@ body {
   -ms-justify-content: center;
   justify-content: center;
   background-color: #000;
-  padding: 0em 4em 4em 4em; }
+  padding: 0em 0em 0em 0em; }
   body.is-preload *, body.is-preload *:before, body.is-preload *:after {
     -moz-animation: none !important;
     -webkit-animation: none !important;
@@ -889,13 +889,14 @@ button,
       position: relative; } }
 /* Top border bar - inspired by CR7 */
 .top-header-border {
-  width: 100%;
-  position: sticky;
+  width: 100vw;
+  position: fixed;
   top: 0;
+  left: 0;
   margin: 0;
   background: #000;
-  border-top: 6px solid #ffcc00;  /* Golden CR7-style highlight */
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+  border-top: 6px solid #000000;  /* Golden CR7-style highlight */
+  box-shadow: 0 4px 10px rgba(92, 91, 91, 0.123);
   position: relative;
   z-index: 1000;
 }
