--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,6 +1,29 @@
 @import url("https://fonts.googleapis.com/css?family=Roboto:400,700");
 
+/* Intro */
+
+#intro-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #000;
+  z-index: 9999;
+  transition: opacity 2s ease-in-out;
+  opacity: 1;
+  pointer-events: none;
+}
+#intro-overlay.hidden {
+  opacity: 0;
+}
+
+
 /* Body */
+
+<div id="intro-overlay"></div>
+
+
 html,
 body {
   height: 100%;
