--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -8,15 +8,16 @@ body {
   width: 100%;
   font-family: "Roboto", sans-serif;
   background-color: #000;
-  color: rgba(49, 49, 49, 0.69);
+  color: rgb(0, 0, 0);
   overflow-x: hidden;
 }
 
 /* Top header with job title */
 .top-header-border {
   width: 100%;
-  top: 0;
-  left: 0;
+  top: 100%;
+  left: 100%;
+  right: 100%;
   margin: 0;
   background: #000;
   border-top: 0px solid #000000;
