--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -8,7 +8,7 @@ body {
   width: 100%;
   font-family: "Roboto", sans-serif;
   background-color: #000;
-  color: rgb(0, 0, 0);
+  color: rgba(255, 255, 255, 0.850);
   overflow-x: hidden;
 }
 
@@ -32,7 +32,7 @@ body {
   align-items: center;
   padding: 1em 2em;
   background: #000000;
-  color: #fff;
+  color: #ffffff;
   font-size: 1.5em;
   font-weight: 600;
   letter-spacing: 1px;
