--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -26,9 +26,9 @@ body {
 }
 
 #preloader-svg {
-  width: 80vw;
-  height: auto;
-  max-width: 600px;
+  width: 1200vw;
+  height: 800vw;
+  max-width: 800px;
 }
 
 
@@ -56,7 +56,7 @@ body {
 }
 
 #data-center .path {
-  animation-delay: 0s;
+  animation-delay: 1s;
 }
 
 #real-estate .path,
@@ -102,7 +102,7 @@ body {
 /* Pulse effect */
 
 .pulse {
-  animation: pulse 1s ease forwards;
+  animation: pulse 1.5s ease forwards;
 }
 
 @keyframes trace {
@@ -137,8 +137,8 @@ body {
 #line-right {
   stroke-dasharray: 300;
   stroke-dashoffset: 300;
-  animation: draw-line 2s ease forwards;
-  animation-delay: 2.5s;
+  animation: draw-line 3s ease forwards;
+  animation-delay: 3s;
 }
 
 @keyframes draw-line {
