--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -66,35 +66,25 @@ body {
 }
 
 #real-estate {
-  position: absolute;
+  position: relative;
   left: 25%;
   top: 50%;
   transform: translate(25%, 50%);
 }
 
 #antenna {
-  position: absolute;
+  position: relative;
   top: 50%;
   left: 20%;
   transform: translate(50%, 20%);
 }
 
 #house {
-  position: absolute;
+  position: relative;
   right: 75%;
   top: 50%;
   transform: translate(75%, 50%);
 }
-
-
-.icon {
-  width: 80px;
-  height: 80px;
-  stroke: #1cb495;
-  fill: none;
-  stroke-width: 1.5;
-}
-
 
 /* Pulse effect */
 
