--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -33,7 +33,7 @@ body {
 
 
 #data-center {
-  position: relative;
+  position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(50%, 50%);
@@ -50,7 +50,7 @@ body {
 }
 
 #data-center {
-  position: relative;
+  position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(50%, 50%);
@@ -70,25 +70,25 @@ body {
 #real-estate {
   position: relative;
   left: 25%;
-  top: 50%;
+  top: 20%;
   transform-origin: center;
-  transform: translate(25%, 50%);
+  transform: translate(25%, 20%);
 }
 
 #antenna {
   position: relative;
-  top: 50%;
-  left: 20%;
+  top: 60%;
+  left: 10%;
   transform-origin: center;
-  transform: translate(50%, 20%);
+  transform: translate(60%, 10%);
 }
 
 #house {
   position: relative;
   right: 75%;
-  top: 50%;
+  top: 20%;
   transform-origin: center;
-  transform: translate(75%, 50%);
+  transform: translate(75%, 20%);
 }
 
 /* Pulse effect */
