--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -69,6 +69,33 @@ body {
   }
 }
 
+#main-path {
+  stroke: #1cb495;
+  stroke-dasharray: 800;
+  stroke-dashoffset: 800;
+  animation: draw-path 3s ease forwards;
+}
+
+.handhole {
+  fill: #fff;
+  opacity: 0;
+  animation: fadeIn 1s ease forwards;
+  animation-delay: 3.5s;
+}
+
+@keyframes draw-path {
+  to {
+    stroke-dashoffset: 0;
+  }
+}
+
+@keyframes fadeIn {
+  to {
+    opacity: 1;
+  }
+}
+
+
 /* Top header with job title */
 
 .top-header-border {
