--- a/main.css
+++ b/main.css
@@ -95,17 +95,17 @@ body {
 }
 
 .bg01 {
-  background-image: url("../../images/bg01.jpg");
+  background-image: url("/images/bg01.jpg");
   animation-delay: 0s;
 }
 
 .bg02 {
-  background-image: url("../../images/bg02.jpg");
+  background-image: url("/images/bg02.jpg");
   animation-delay: 10s;
 }
 
 .bg03 {
-  background-image: url("../../images/bg03.jpg");
+  background-image: url("/images/bg03.jpg");
   animation-delay: 20s;
 }
 
