--- a/main.css
+++ b/main.css
@@ -7,7 +7,7 @@ body {
   height: 100%;
   width: 100%;
   font-family: "Roboto", sans-serif;
-  background-color: #000;
+  background-color: rgb(0, 0, 0, 0.6);
   color: rgba(255, 255, 255, 0.850);
   overflow-x: hidden;
 }
