--- a/main.css
+++ b/main.css
@@ -37,12 +37,12 @@ body {
   font-weight: 600;
   letter-spacing: 1px;
   text-transform: uppercase;
-  border-bottom: 1px solid rgb(255, 255, 255); /* subtle tech accent */
+  border-bottom: 1px solid rgb(255, 255, 255, 0.6); /* subtle tech accent */
 }
 
 .header-links a {
   margin-left: 1.5em;
-  color: rgb(255, 255, 255);
+  color: rgb(255, 255, 255, 0.6);
   text-decoration: none;
   font-size: 0.85em;
   font-weight: 500;
@@ -51,7 +51,7 @@ body {
 }
 
 .header-links a:hover {
-  color: rgb(255, 255, 255);
+  color: rgb(255, 255, 255, 0.6);
 }
 
 /* Circle headshot */
